--- a/MVCBiblioteka/Views/BooksCart/CartSummary.cshtml
+++ b/MVCBiblioteka/Views/BooksCart/CartSummary.cshtml
@@ -1,4 +1,4 @@
 ﻿@Html.ActionLink("Cart (" + ViewData["CartCount"] + ")",
     "Index",
-    "ShoppingCart",
+    "BooksCart",
     new { id = "cart-status" })
