--- a/MVCBiblioteka/Views/BooksCart/Index.cshtml
+++ b/MVCBiblioteka/Views/BooksCart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCBiblioteka.ViewModels.ShoppingCartViewModel
+﻿@model MVCBiblioteka.ViewModels.BooksCartViewModel
 
 @{
     ViewBag.Title = "Index";
@@ -14,7 +14,7 @@
             var recordToDelete = $(this).attr("data-id");
             if (recordToDelete != '') {
                 // Perform the ajax post
-                $.post("/ShoppingCart/RemoveFromCart", {"id": recordToDelete },
+                $.post("/BooksCart/RemoveFromCart", { "id": recordToDelete },
                     function (data) {
                         // Successful requests get here
                         // Update the page elements
