--- a/MVCBiblioteka/Views/Home/Index.cshtml
+++ b/MVCBiblioteka/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<MVCBiblioteka.Models.Category>
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -9,4 +10,14 @@
 <div>
     @Html.ActionLink("Lista użytkowników", "Index", "Users")<br />
     @Html.ActionLink("Lista książek", "Index", "Books")
+
+    <p>
+        Select from @Model.Count() genres:
+    </p>
+    <ul>
+        @foreach (var genre in Model)
+        {
+            <li>@Html.ActionLink(genre.name, "Browse", new { genre = genre.name })</li>
+        }
+    </ul>
 </div>
