--- a/MVCBiblioteka/Views/Books/Create.cshtml
+++ b/MVCBiblioteka/Views/Books/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.premiereDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.premiereDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.premiereDate, new { htmlAttributes = new { @class = "form-control", placeholder="rrrr/mm/dd" } })
                 @Html.ValidationMessageFor(model => model.premiereDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PublisherID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PublisherID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Publishers.FirstOrDefault().name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PublisherID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,7 +42,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AuthorID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AuthorID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Authors.FirstOrDefault().name, new { htmlAttributes = new { @class = "form-control",placeholder="Imię" } })
+                @Html.EditorFor(model => model.Authors.FirstOrDefault().surname, new { htmlAttributes = new { @class = "form-control", placeholder="Nazwisko"} })
                 @Html.ValidationMessageFor(model => model.AuthorID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,7 +51,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CategoryID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Category.FirstOrDefault().name, new { htmlAttributes = new { @class = "form-control" }  })
                 @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
             </div>
         </div>
