--- a/MVCBiblioteka/Views/Books/Details.cshtml
+++ b/MVCBiblioteka/Views/Books/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MVCBiblioteka.Models.Book
 
+
 @{
     ViewBag.Title = "Details";
 }
@@ -31,7 +32,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PublisherID)
+            @Html.DisplayFor(model => model.Publishers.FirstOrDefault().name)
         </dd>
 
         <dt>
@@ -39,7 +40,8 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AuthorID)
+            @Html.DisplayFor(model => model.Authors.FirstOrDefault().allname)
+            @Html.DisplayFor(model => model.Authors.FirstOrDefault().surname)
         </dd>
 
         <dt>
@@ -47,7 +49,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CategoryID)
+            @Html.DisplayFor(model => model.Category.FirstOrDefault().name)
         </dd>
 
         <dt>
