--- a/MVCBiblioteka/Views/Books/Create.cshtml
+++ b/MVCBiblioteka/Views/Books/Create.cshtml
@@ -1,18 +1,17 @@
 ﻿@model MVCBiblioteka.Models.Book
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Tworzenie nowej książki";
 }
 
-<h2>Create</h2>
+<h2>Tworzenie nowej książki</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Book</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -81,14 +80,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Stwórz" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 
 @section Scripts {
