--- a/MVCBiblioteka/Views/Categories/Browse.cshtml
+++ b/MVCBiblioteka/Views/Categories/Browse.cshtml
@@ -1,19 +1,19 @@
 ﻿@model MVCBiblioteka.Models.Category
 
 @{
-    ViewBag.Title = "Browse";
+    ViewBag.Title = "Lista książek";
 }
+
 <div class="genre">
-    <h3><em>@Model.name</em> Albums</h3>
+    <h3>Gatunek: <em>@Model.name</em></h3>
 
     <ul id="album-list">
         @foreach (var album in Model.Books)
         {
             <li>
-                <a href="@Url.Action("Details",
-                    new { id = album.BookID })">
+                <a href="@Url.Action("Details", "Books", new { id = album.BookID })">
                     @*<img alt="@album.title"
-                         src="@album.AlbumArtUrl" />*@
+                        src="@album.AlbumArtUrl" />*@
                     <span>@album.title</span>
                 </a>
             </li>
