--- a/MVCBiblioteka/Views/Categories/Details.cshtml
+++ b/MVCBiblioteka/Views/Categories/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model MVCBiblioteka.Models.Category
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły gatunku";
 }
 
-<h2>Details</h2>
+<h2>Szczegóły gatunku</h2>
 
 <div>
-    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,6 +20,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CategoryID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.CategoryID }) |
+    @Html.ActionLink("Wróć do listy", "Index")
 </p>
