--- a/MVCBiblioteka/Views/Categories/Edit.cshtml
+++ b/MVCBiblioteka/Views/Categories/Edit.cshtml
@@ -1,17 +1,16 @@
 ﻿@model MVCBiblioteka.Models.Category
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edytowanie gatunku";
 }
 
-<h2>Edit</h2>
+<h2>Edytowanie gatunku</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Category</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.CategoryID)
@@ -33,5 +32,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
