--- a/MVCBiblioteka/Views/Checkout/AddressAndPayment.cshtml
+++ b/MVCBiblioteka/Views/Checkout/AddressAndPayment.cshtml
@@ -1,27 +1,23 @@
 ﻿@model MVCBiblioteka.Models.Order
 
 @{
-    ViewBag.Title = "AddressAndPayment";
+    ViewBag.Title = "Dane wypożyczającego";
 }
 
-<h2>AddressAndPayment</h2>
+<h2>Dane wypożyczającego</h2>
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")"
         type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")"
         type="text/javascript"></script>
 @using (Html.BeginForm())
 {
-
-    <h2>Address And Payment</h2>
     <fieldset>
-        <legend>Shipping Information</legend>
         @Html.EditorForModel()
     </fieldset>
     <fieldset>
         <legend>Payment</legend>
         <p>
-            We're running a promotion: all music is free
-            with the promo code: "FREE"
+            Wpisz kod potwierdzający wypożyczenie: "HURA"
         </p>
         <div class="editor-label">
             @Html.Label("Promo Code")
@@ -31,5 +27,5 @@
         </div>
     </fieldset>
 
-    <input type="submit" value="Submit Order" />
+    <input type="submit" value="Wypożycz" />
 }
