--- a/MVCBiblioteka/Views/Manage/Index.cshtml
+++ b/MVCBiblioteka/Views/Manage/Index.cshtml
@@ -1,34 +1,38 @@
 ﻿@model MVCBiblioteka.Models.IndexViewModel
 
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Zarządzaj profilem";
 }
 
 <h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
+    <h4>Zmień ustawienia profilu</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>Password:</dt>
+        <dt>Hasło:</dt>
         <dd>
             [
             @if (Model.HasPassword)
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+                @Html.ActionLink("Zmień swoje hasło", "ChangePassword")
             }
             else
             {
-                @Html.ActionLink("Create", "SetPassword")
+                @Html.ActionLink("Stwórz", "SetPassword")
             }
             ]
         </dd>
-        <dt>External Logins:</dt>
+        <br/><br/>
+        <dd>
+           [ @Html.ActionLink("Twoje zamówienia", "getOrders", "Manage") ]
+        </dd>
+        @*<dt>External Logins:</dt>
         <dd>
             @Model.Logins.Count [
             @Html.ActionLink("Manage", "ManageLogins") ]
-        </dd>
+        </dd>*@
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
              
@@ -57,12 +61,12 @@
                 }
             </dd>
         *@
-        <dt>Two-Factor Authentication:</dt>
+        @*<dt>Two-Factor Authentication:</dt>
         <dd>
             <p>
                 There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
+            </p>*@
             @*@if (Model.TwoFactor)
                 {
                     using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -83,18 +87,8 @@
                         </text>
                     }
                 }*@
-        </dd>
+        @*</dd>*@
     </dl>
-
-    @*@Html.ActionLink("Moje zamówienia", "Details", new { id = item. })
-    @Html.ActionLink("Details", "Details", new { id = item.BookID }) |*@
-
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.BookID }) |
-                
-                @Html.ActionLink("Delete", "Delete", new { id = item.BookID })*@
-
-
-                @Html.ActionLink("getOrders", "getOrders", "Manage") |
-            </td>
-    }
+    
+    
+</div>
