--- a/MVCBiblioteka/Views/Manage/getOrders.cshtml
+++ b/MVCBiblioteka/Views/Manage/getOrders.cshtml
@@ -1,25 +1,25 @@
 ﻿@model IEnumerable<MVCBiblioteka.Models.OrderDetail>
 
 @{
-    ViewBag.Title = "getOrders";
+    ViewBag.Title = "Twoje wypożyczenia";
 }
 
-<h2>getOrders</h2>
+<h2>Twoje wypożyczenia</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Stwórz nowe", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Book.title)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Order.Username)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.User.name)
-        </th>
+        </th>*@
         <th>
             @Html.DisplayNameFor(model => model.Quantity)
         </th>
@@ -37,12 +37,12 @@
         <td>
             @Html.DisplayFor(modelItem => item.Book.title)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.Order.Username)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.User.name)
-        </td>
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.Quantity)
         </td>
@@ -53,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.returnDate)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.OrderDetailID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.OrderDetailID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.OrderDetailID })
+            @*@Html.ActionLink("Edit", "Edit", new { id=item.OrderDetailID }) |*@
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.OrderDetailID })
+            @*@Html.ActionLink("Delete", "Delete", new { id=item.OrderDetailID })*@
         </td>
     </tr>
 }
