--- a/MVCBiblioteka/Views/Shared/_Layout.cshtml
+++ b/MVCBiblioteka/Views/Shared/_Layout.cshtml
@@ -11,10 +11,11 @@
           type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")"
             type="text/javascript"></script>
-
+    <link href="@Url.Content("~/Styles/main.css")" rel="stylesheet" type="text/css" />
+    @RenderSection("Styles", false)
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -22,31 +23,32 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Biblioteka internetowa", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li><a href="@Url.Content("~/Home/")">Store</a></li>
+                    <li>@Html.ActionLink("Lista książek", "Index", "Books")</li>
+                    <li>@Html.ActionLink("Kategorie", "CategoriesList", "Categories")</li>
+                    <li>@Html.ActionLink("Autorzy", "Index", "Author")</li>
+                    <li>@Html.ActionLink("Wydawnictwa", "Index", "Publisher")</li>
                     <li>@{Html.RenderAction("CartSummary", "BooksCart");}</li>
-                    <li><a href="@Url.Content("~/Users/")">Admin</a>
-                    </li>
+                    <li><a href="@Url.Content("~/Users/")">| Panel admina </a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
-    </div>
-    @*@{Html.RenderAction("GenreMenu", "Home");}*@
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
+        </div>
+        @*@{Html.RenderAction("GenreMenu", "Home");}*@
+        <div class="container body-content">
+            @RenderBody()
+            @*<hr />*@
+            <footer>
+                @*<p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>*@
+            </footer>
+        </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        @RenderSection("scripts", required: false)
 </body>
 </html>
