--- a/MVCBiblioteka/Views/Users/Create.cshtml
+++ b/MVCBiblioteka/Views/Users/Create.cshtml
@@ -1,17 +1,16 @@
 ﻿@model MVCBiblioteka.Models.ApplicationUser
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Tworzenie nowego użytkownika";
 }
 
-<h2>Create</h2>
+<h2>Tworzenie nowego użytkownika</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ApplicationUser</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -159,5 +158,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
