--- a/MVCBiblioteka/Views/Users/Delete.cshtml
+++ b/MVCBiblioteka/Views/Users/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model MVCBiblioteka.Models.ApplicationUser
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Usuwanie użytkownika";
 }
 
-<h2>Delete</h2>
+<h2>Usuwanie użytkownika</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Jesteś pewien, że chcesz usunąć tego użytkownika?</h3>
 <div>
-    <h4>ApplicationUser</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -137,8 +136,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Usuń" class="btn btn-default" /> |
+            @Html.ActionLink("Wróć do listy", "Index")
         </div>
     }
 </div>
