--- a/MVCBiblioteka/Views/Users/Index.cshtml
+++ b/MVCBiblioteka/Views/Users/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<MVCBiblioteka.Models.ApplicationUser>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista użytkowników";
 }
 
-<h2>Index</h2>
+<h2>Lista użytkowników</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Stwórz nowego", "Create")
 </p>
 <table class="table">
     <tr>
@@ -26,33 +26,33 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PasswordHash)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SecurityStamp)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TwoFactorEnabled)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LockoutEnabled)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessFailedCount)
-        </th>
+        @*<th>
+        @Html.DisplayNameFor(model => model.EmailConfirmed)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.PasswordHash)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.SecurityStamp)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.PhoneNumber)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.TwoFactorEnabled)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.LockoutEnabled)
+    </th>
+    <th>
+        @Html.DisplayNameFor(model => model.AccessFailedCount)
+    </th>*@
         <th>
             @Html.DisplayNameFor(model => model.UserName)
         </th>
@@ -76,7 +76,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Email)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.EmailConfirmed)
         </td>
         <td>
@@ -102,14 +102,14 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.AccessFailedCount)
-        </td>
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.UserName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edytuj", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
