--- a/MVCBiblioteka/Views/Checkout/Complete.cshtml
+++ b/MVCBiblioteka/Views/Checkout/Complete.cshtml
@@ -5,5 +5,4 @@
 }
 
 <h2>Książka wypożyczona!</h2>
-<p>Dziękujemy za wypożyczenie naszej książki. Życzymy owocnej lektury :)
-    Numer Twojego wypożyczenia: @Model</p>
+<p>Dziękujemy za wypożyczenie naszej książki. Życzymy owocnej lektury :)</p>
