--- a/MVCBiblioteka/Views/Books/Details.cshtml
+++ b/MVCBiblioteka/Views/Books/Details.cshtml
@@ -78,7 +78,10 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edytuj", "Edit", new { id = Model.BookID }) |
+@if (User.IsInRole("Administrator"))
+{
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.BookID })
+                                                                  }
     @Html.ActionLink("Wróć do listy", "Index")
 </p>
 
