--- a/MVCBiblioteka/Views/Books/Index.cshtml
+++ b/MVCBiblioteka/Views/Books/Index.cshtml
@@ -45,9 +45,15 @@
             @Html.DisplayFor(modelItem => item.state)
         </td>
         <td>
-            @Html.ActionLink("Edytuj", "Edit", new { id=item.BookID }) |
+@if (User.IsInRole("Administrator"))
+{
+            @Html.ActionLink("Edytuj", "Edit", new { id = item.BookID })
+}
             @Html.ActionLink("Szczegóły", "Details", new { id=item.BookID }) |
-            @Html.ActionLink("Usuń", "Delete", new { id=item.BookID })
+@if (User.IsInRole("Administrator"))
+{
+            @Html.ActionLink("Usuń", "Delete", new { id = item.BookID })
+}
         </td>
     </tr>
 }
