--- a/MVCBiblioteka/Views/Categories/Create.cshtml
+++ b/MVCBiblioteka/Views/Categories/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Tworzenie nowego gatunku";
+    Layout = "~/Views/Shared/_Admin.cshtml";
 }
 
 <h2>Tworzenie nowego gatunku</h2>
