zapomniałam o linku do listy użytkowników u admina

--- a/MVCBiblioteka/Views/Books/Index.cshtml
+++ b/MVCBiblioteka/Views/Books/Index.cshtml
@@ -16,7 +16,7 @@
     {
     <p>
         Tytuł: @Html.TextBox("SearchTitle") 
-        Autor: @Html.TextBox("SearchAuthor")
+        @*Autor: @Html.TextBox("SearchAuthor")*@
         ISBN: @Html.TextBox("SearchISBN") 
         <input type="submit" value="Szukaj" />
     </p>
