--- a/MVCBiblioteka/Views/Shared/_Admin.cshtml
+++ b/MVCBiblioteka/Views/Shared/_Admin.cshtml
@@ -28,6 +28,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Lista książek", "Index", "Books")</li>
+                    <li>@Html.ActionLink("Lista użytkowników", "Index", "Users")</li>
                     <li>@Html.ActionLink("Kategorie", "Index", "Categories")</li>
                     <li>@Html.ActionLink("Autorzy", "Index", "Authors")</li>
                     <li>@Html.ActionLink("Wydawnictwa", "Index", "Publishers")</li>
